# cs07-assignments-ay93546

./: .replit  README.md  SampleSuperStore.ipynb  assignment2-1.py  assignment2-2.py  assignment3-1.ipynb  assignment3-1e4.ipynb  assignment3-1e5.ipynb  assignment3-1e6.ipynb  assignment4-2.ipynb  assignment4-4.ipynb  assignment6-1.ipynb  assignmentmod5p1.ipynb  assignmentmod5p2.ipynb  assignmentmod5p3.ipynb  ch07exercise.py  classcode.py  graph.ipynb  pyproject.toml  replittest.py  turtle.ipynb
Mod0/: Sample - Superstore.xls  SampleSuperStore.ipynb  graph.ipynb  turtle.ipynb
Mod2/: assignment2-1.py  assignment2-2.py
Mod3/: assignment3-1.ipynb
Mod4/: assignment4-1.ipynb  assignment4-2.ipynb  assignment4-3.ipynb  assignment4-4.ipynb
Mod5/: assignment5-1.ipynb  assignment5-2.ipynb  assignment5-3.ipynb  ch07exercise.py
Mod5/Quiz5/: problem2.py  problem3.py
Mod6/: assignment6-1.ipynb
Mod7/: ch09exercises.py  example.py  imdb.xls  reviewexample.py  student.xls
Mod7/quiz7/: problem.py  students.xls
Quiz4/: problem1.py  problem2.py
Quiz5/: problem1.py
Quiz6/: problem1.py  problem2.py
final/: fl2021.txt  question1.py  question2.py
